force-app/main/default/objects/Trigger_Recordtype__c/Trigger_Recordtype__c.object-meta.xml
<CustomObject>
    <label>Trigger Recordtype</label>
    <nameField>
        <label>Recordtype Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trigger Recordtypes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>