force-app/main/default/objects/Trigger_Recordtype__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enabled for this particular recordtype, but only if the Trigger is also enabled.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>