force-app/main/default/objects/Trigger_Recordtype__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <inlineHelpText>Use this format: Param1=Value1;Param2=Value2</inlineHelpText>
    <label>Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>