force-app/main/default/objects/Trigger_Recordtype__c/fields/Recordtype_Id__c.field-meta.xml
<CustomField>
    <fullName>Recordtype_Id__c</fullName>
    <inlineHelpText>18 character id of the recordtype</inlineHelpText>
    <label>Recordtype Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>