force-app/main/default/objects/Trigger_Recordtype__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <label>Trigger</label>
    <referenceTo>Trigger__c</referenceTo>
    <relationshipLabel>Trigger Recordtypes</relationshipLabel>
    <relationshipName>Trigger_Recordtypes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>